feat: 마이페이지, 강아지 프로필 추가 api 연결

--- a/android/app/src/main/res/menu/menu_main_bottom.xml
+++ b/android/app/src/main/res/menu/menu_main_bottom.xml
@@ -8,7 +8,7 @@
         android:title="@string/bottom_home" />
 
     <item
-        android:id="@+id/woofFragment"
+        android:id="@+id/footPrintFragment"
         android:enabled="true"
         android:icon="@drawable/ic_dog"
         android:title="@string/bottom_woof" />
