--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- ImageView Style-->
+    <style name="Circle">
+        <item name="cornerSize">50%</item>
+    </style>
+
+    <style name="RoundSmall">
+        <item name="cornerSize">16dp</item>
+    </style>
+
+    <style name="RoundBig">
+        <item name="cornerSize">24dp</item>
+    </style>
+
     <!-- Bold -->
     <style name="Theme.AppCompat.TextView.Bold.Gray10.Size18" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/gray10</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.Bold.Black.Size18" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">20dp</item>
         <item name="android:includeFontPadding">false</item>
         <item name="fontFamily">@font/noto_sans_kr_bold</item>
@@ -32,6 +52,13 @@
         <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.SemiBold.White.Size18" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
+    </style>
+
     <style name="Theme.AppCompat.TextView.SemiBold.Gray09.Size24" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/gray09</item>
         <item name="android:textSize">24dp</item>
@@ -53,8 +80,22 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.SemiBold.White.Size24" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textSize">24dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="Theme.AppCompat.TextView.SemiBold.Gray05.Size16" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/gray05</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.Gray07.Size16" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/gray07</item>
         <item name="android:textSize">16dp</item>
         <item name="android:includeFontPadding">false</item>
         <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
@@ -67,11 +108,25 @@
         <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.SemiBold.White.Size16" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
+    </style>
+
     <style name="Theme.AppCompat.TextView.SemiBold.Gray07.Size14" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textSize">14dp</item>
         <item name="android:includeFontPadding">false</item>
         <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
         <item name="android:textColor">@color/gray07</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.SemiBold.White.Size14" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textSize">14dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <!-- Medium -->
@@ -95,6 +150,13 @@
         <item name="fontFamily">@font/noto_sans_kr_medium</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.Medium.White.Size18" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_medium</item>
+    </style>
+
     <style name="Theme.AppCompat.TextView.Medium.Gray07.Size14" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/gray07</item>
         <item name="android:textSize">14dp</item>
@@ -104,6 +166,13 @@
 
     <style name="Theme.AppCompat.TextView.Medium.Black.Size14" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_medium</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.Medium.White.Size14" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14dp</item>
         <item name="android:includeFontPadding">false</item>
         <item name="fontFamily">@font/noto_sans_kr_medium</item>
@@ -191,6 +260,20 @@
     <style name="Theme.AppCompat.TextView.Regular.Gray07.Size12" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/gray07</item>
         <item name="android:textSize">12dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_regular</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.Regular.Gray07.Size10" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/gray07</item>
+        <item name="android:textSize">10dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_regular</item>
+    </style>
+
+    <style name="Theme.AppCompat.TextView.Regular.White.Size10" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">10dp</item>
         <item name="android:includeFontPadding">false</item>
         <item name="fontFamily">@font/noto_sans_kr_regular</item>
     </style>
