feat: 강아지 등록하기 UI 구현

--- a/android/app/src/main/res/values/themes.xml
+++ b/android/app/src/main/res/values/themes.xml
@@ -3,10 +3,22 @@
     <style name="Base.Theme.Friendogly" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="checkboxStyle">@style/Widget.App.CheckBox</item>
+
+    </style>
+
+    <style name="Widget.App.CheckBox" parent="Widget.MaterialComponents.CompoundButton.CheckBox">
+        <item name="buttonTint">@color/blue</item>
+    </style>
+
+
+    <style name="ThemeOverlay.App.CheckBox" parent="">
+        <item name="colorOnSurface">@color/blue</item>
+        <item name="colorSecondary">@color/blue</item>
     </style>
 
     <style name="Theme.Friendogly" parent="Base.Theme.Friendogly" />
-
 
     <style name="Theme.ImageCropper" parent="Theme.AppCompat">
         <item name="android:statusBarColor">@color/white</item>
