--- a/android/app/src/main/res/layout/fragment_register_dog.xml
+++ b/android/app/src/main/res/layout/fragment_register_dog.xml
@@ -84,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
                 android:adjustViewBounds="true"
-                app:dogProfile="@{vm.uiState.profileImage}"
+                app:dogProfile="@{vm.profileImage}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -351,7 +351,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_birthday"
                 app:onSingleClick="@{() -> vm.registerDog()}"
-                app:profileImage="@{vm.uiState.profileImage}"
+                app:profileImage="@{vm.profileImage}"
                 tools:background="@color/blue" />
 
 
