feat: 모임, 채팅 Fragment, 내비게이션 연결

--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
             android:id="@+id/bottom_navi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:clipChildren="false"
             app:elevation="0dp"
             app:itemActiveIndicatorStyle="@android:color/transparent"
