--- a/android/app/src/main/res/layout/fragment_group_list.xml
+++ b/android/app/src/main/res/layout/fragment_group_list.xml
@@ -61,9 +61,11 @@
             app:layout_constraintTop_toBottomOf="@id/view_group_list_top_bar" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_group_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/include_group_list_filter"
             tools:listitem="@layout/item_group" />
     </androidx.constraintlayout.widget.ConstraintLayout>
