--- a/android/app/src/main/res/layout/include_group_selector.xml
+++ b/android/app/src/main/res/layout/include_group_selector.xml
@@ -10,6 +10,10 @@
             name="groupFilterSelector"
             type="com.woowacourse.friendogly.presentation.ui.group.list.model.GroupFilterSelector" />
 
+        <variable
+            name="actionHandler"
+            type="com.woowacourse.friendogly.presentation.ui.group.list.GroupListActionHandler" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -46,13 +50,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_group_list_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/include_group_list_participation_filter"
-            tools:listitem="@layout/item_filter" />
+            tools:listitem="@layout/item_group" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
