--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="gray03">#EEEEEE</color>
     <color name="gray02">#F5F5F5</color>
     <color name="gray01">#FAFAFA</color>
+
+    <color name="orange7">#FF821E</color>
     
     <color name="orange07">#FF821E</color>
     <color name="orange05">#FFB377</color>
