--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.ui.map.MapFragment">
+        tools:context=".presentation.ui.woof.WoofFragment">
 
         <com.naver.maps.map.MapView
             android:id="@+id/map_view"
@@ -15,15 +15,15 @@
 
         <ImageButton
             android:id="@+id/btn_map_mark"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="14dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/ripple_circle_white"
             android:clickable="true"
             android:focusable="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_dog"
+            android:src="@drawable/ic_mark_btn"
+            android:background="@drawable/ripple_circle_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
