--- a/android/app/src/main/res/layout/item_dog.xml
+++ b/android/app/src/main/res/layout/item_dog.xml
@@ -25,10 +25,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
         android:background="@drawable/rect_white_fill_10"
-        android:clipToOutline="true">
+        android:clipToOutline="true"
+        app:onSingleClick="@{() -> actionHandler.navigateToDogDetail(0)}">
 
         <ImageView
-            android:id="@+id/iv_product_thumbnail"
+            android:id="@+id/iv_dog_thumbnail"
             urlToImage="@{dog.image}"
             android:layout_width="200dp"
             android:layout_height="200dp"
@@ -38,7 +39,7 @@
             tools:src="@drawable/ic_launcher_background" />
 
         <TextView
-            android:id="@+id/tv_product_name"
+            android:id="@+id/tv_dog_name"
             style="@style/Theme.AppCompat.TextView.Regular.Black.Size16"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -50,7 +51,7 @@
             android:paddingBottom="10dp"
             android:text="@{dog.name}"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_product_thumbnail"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_dog_thumbnail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
