--- a/android/app/src/main/res/navigation/navigation_main.xml
+++ b/android/app/src/main/res/navigation/navigation_main.xml
@@ -21,6 +21,23 @@
         android:label="MyPageFragment"
         tools:layout="@layout/fragment_my_page">
 
+        <action
+            android:id="@+id/action_myPageFragment_to_dogDetailFragment"
+            app:destination="@id/dogDetailFragment"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/dogDetailFragment"
+        android:name="com.woowacourse.friendogly.presentation.ui.dogdetail.DogDetailFragment"
+        android:label="DogDetailFragment"
+        tools:layout="@layout/fragment_dog_detail">
+
+        <argument
+            android:name="id"
+            app:argType="long" />
     </fragment>
 
 </navigation>
