--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -349,6 +349,13 @@
         <item name="android:includeFontPadding">false</item>
         <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
     </style>
+    <style name="Theme.AppCompat.TextView.SemiBold.Orange.Size16" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/orange07</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
+    </style>
+
 
     <!--Profile Edit Text-->
     <style name="Theme.AppCompat.TextView.Profile.EditText.Contents" parent="@style/Widget.AppCompat.EditText">
